# ass2-DAE

./: Makefile  README.md  pyproject.toml  requirements.txt
ass2/: __init__.py  dataset.py  features.py  plots.py
ass2/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
